# mobile-api-server

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  dwani_languages.py  lang_names.py  main.py
app/adapters/: ocr.py  pdf.py  stt.py  tts.py
app/clients/: vllm.py
app/middleware/: api_key.py
app/prompts/: __init__.py  gemma_e2b.py
app/routers/v1/: __init__.py  _upload.py  chat.py  extract.py  pdf_summary.py  speech.py  sts.py  transcribe.py  translate.py  visual.py
app/schemas/: __init__.py  v1.py
docker/: Dockerfile  nginx.conf
tests/: conftest.py  test_gemma_prompts.py  test_smoke.py
